--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -151,7 +151,7 @@ $code-color: #24292f !default;
 $code-color-dark: #adbac7 !default;
 
 // Color of the code background
-$code-background-color: #f6f8fa !default;
+$code-background-color: #f4f6f8 !default;
 $code-background-color-dark: #2d333b !default;
 
 $code-error-color: #dc3545 !default;
@@ -160,7 +160,7 @@ $code-error-color: #dc3545 !default;
 $code-highlight-color: #fff8c5 !default;
 $code-highlight-color-dark: rgba(174, 124, 20, 0.15) !default;
 
-$code-header-color: #9c9c9c !default;
+$code-header-color: #7d7d7d !default;
 $code-header-color-dark: #b1b0b0 !default;
 
 // Font size of the code
